--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,16 +5,26 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
-<LinearLayout
-    android:layout_width=""
-    android:layout_height=""
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:gravity="center"
+    android:background="@color/red"
+    android:orientation="vertical">
     <TextView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+
+        android:text="Hola Platzi, curso de interfaces" >
+
+
+    <EditText
+        android:hint="Escribe tu  nombre"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+
+        android:layout_height="wrap_content"/>
+
+</LinearLayout>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
